--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install",
-    "lint-staged": "yarn lint-staged"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -54,6 +53,11 @@
     "typescript": "^4.7.4",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "yarn lint"
+    ]
   },
   "jest": {
     "moduleFileExtensions": [
