--- a/.github/workflows/github-action-practice.yml
+++ b/.github/workflows/github-action-practice.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+        node-version: [15.x]
     steps:
       - name: echo test word
         run: echo "TEST repository is ${{ github.repository }}"
@@ -26,4 +26,4 @@ jobs:
         run: npm i
 
       - name: run test
-        run: jest
+        run: npm test
